update css styes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		-->
 
 <!-- CSS -->
-	<link href="/look/css/main.css" rel="stylesheet" type="text/look/css" media="screen" />
+	<link href="/look/css/main.css" rel="stylesheet" type="text/css" media="screen" />
 
 <!-- IE Conditional Statement -->
 
@@ -28,7 +28,7 @@
 				 <script src="/look/scripts/DOMAssistantCompressed-2.8.js" type="text/javascript"></script>
 				 <script src="/look/scripts/ie-css3.js" type="text/javascript"></script>
 				 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">  </script>
-				 <style type="text/look/css">
+				 <style type="text/css">
 					   .clear {zoom: 1; display: block;}
 				 </style>
     <![endif]-->
@@ -43,19 +43,19 @@
 
 	<!-- Footer Position Stick -->
 		<!--[if !IE 7]>
-				<style type="text/look/css">
+				<style type="text/css">
 					#wrapper {display:table; height:100%; }
 				</style>
 	<![endif]-->
 
 	<!-- IE 6 & 7 Stylesheet and Enable IE Advance Selector -->
 	<!--[if lte IE 7]>
-		<link href="/look/css/iefix_6_7.css" rel="stylesheet" type="text/look/css" />
+		<link href="/look/css/iefix_6_7.css" rel="stylesheet" type="text/css" />
 		<script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript">  </script>
 	<![endif]-->
 
 	<!--[if IE 8]>
-		<link href="/look/css/iefix8.css" rel="stylesheet" type="text/look/css" />
+		<link href="/look/css/iefix8.css" rel="stylesheet" type="text/css" />
 	<![endif]-->
 
 <!-- Javascript -->
