--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 	<![endif]-->
 
 <!-- Javascript -->
-<script
+<!-- <script
   src="https://code.jquery.com/jquery-1.4.2.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-  crossorigin="anonymous"></script>
-	<!-- <script type="text/javascript" language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">  </script> -->
+  crossorigin="anonymous"></script> -->
+  <script src="/look/scripts/jquery.js">  </script>
     <script src="/look/scripts/scrollTo.js">  </script>
     <script src="/look/scripts/localScroll.js">  </script>
     <script src="/look/scripts/preloadCssImages.js">  </script>
